Fix Layout issue with overflow of Data by changing flex's parameters and value of overflow-y for Home component

--- a/BuStar/src/components/Home/Home.scss
+++ b/BuStar/src/components/Home/Home.scss
@@ -3,9 +3,10 @@
   background-color: #ecf0f1;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   flex-direction: column;
 
+  overflow-y: scroll;
 }
 
 .inputStyle{
